--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-# VITE_BASE_URL=http://localhost:8080
-VITE_BASE_URL=https://warranty-selection-back.vercel.app
+VITE_BASE_URL=http://localhost:8080
+# VITE_BASE_URL=https://warranty-selection-back.vercel.app
